--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -875,7 +875,7 @@
                         required: true
                     },
                     email: {
-                        required: true
+                        required: false
                     }
 
                     //firstA: {
@@ -1042,10 +1042,11 @@
                     },
                     phone1: {
                         required: "יש להכניס טלפון ראשי"
-                    },
-                    email: {
-                        required: "יש להכניס כתובת מייל"
-                    },
+                    }
+                    //,
+                    //email: {
+                    //    required: "יש להכניס כתובת מייל"
+                    //},
                     //firstA: {
                     //    required: "أدخل الاسم الأول"
                     //},
@@ -1194,15 +1195,20 @@
             var EMail = $("#email").val();
             var EMailReg = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             var EMailMatch = EMailReg.test(EMail);
-            if (!EMailMatch) {
-                swal(
-                    "שים לב!",
-                    "כתובת המייל שהזנת אינה חוקית",
-                    "warning"
-                );
-                eMailValid = false;
-            }
+            if (EMail.length > 0) {
 
+                if (!EMailMatch) {
+                    swal(
+                        "שים לב!",
+                        "כתובת המייל שהזנת אינה חוקית",
+                        "warning"
+                    );
+                    eMailValid = false;
+                }
+
+            } else {
+                eMailValid = true;
+            }
             //END OF NEW
 
             if (englishName == "") {
