--- a/Road to Recovery/pages/viewLocation.html
+++ b/Road to Recovery/pages/viewLocation.html
@@ -122,7 +122,7 @@
                                 Area: arr_Locations[i].Area,
                                 ManagerDetials: arr_Locations[i].ManagerName + " " + arr_Locations[i].ManagerLastName + ', ' + arr_Locations[i].ManagerPhones,
                                 Remarks: arr_Locations[i].Remarks,
-                                RegionName: arr_Locations[i].Name,
+                                RegionName: arr_Locations[i].Region.Name,
                                 Buttons: btnStr
                             }
                         }
@@ -133,7 +133,7 @@
                                 Area: arr_Locations[i].Area,
                                 ManagerDetials: "",
                                 Remarks: arr_Locations[i].Remarks,
-                                RegionName: arr_Locations[i].Name,
+                                RegionName: arr_Locations[i].Region.Name,
                                 Buttons: btnStr
                             }
                         }
