--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -1050,8 +1050,8 @@
                                             <th style="text-align:right">הערות</th>
                                             <th>עודכן לאחרונה</th>
                                             <th>מס' הסעות בחודשיים אחרונים</th>
-                                            <th>מסלול שכיח</th>
-                                            <th>מסלול שכיח אזורי</th>
+                                            <th>מסלול שכיח: נקודה לנקודה</th>
+                                            <th>מסלול שכיח: אזור לאזור</th>
                                             <th>פעולות</th>
                                         </tr>
                                     </thead>
