--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -486,7 +486,7 @@
                                             <th title="Origin" class="timeCustomWidth">מוצא</th>
                                             <th title="Destination" class="timeCustomWidth">יעד</th>
                                             <th title="Hospital" class="timeCustomWidth">בית חולים</th>
-                                            <th title="Barrier" class="timeCustomWidth">מחסום</th>
+                                            <th title="Barrier" class="timeCustomWidth">מעבר</th>
                                             <th title="Count" class="timeCustomWidth">מספר הסעות</th>
 
                                         </tr>
@@ -494,7 +494,7 @@
                                     <tbody></tbody>
                                     <tfoot>
                                         <tr>
-                                            <th colspan="3" style="text-align:left">סה"כ הסעות:</th>
+                                            <th colspan="6" style="text-align:left">סה"כ הסעות:</th>
                                             <th id="center_patients_rides_footer_total"></th>
                                         </tr>
                                     </tfoot>
