--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -486,7 +486,7 @@
                                             <th title="Origin" class="timeCustomWidth">מוצא</th>
                                             <th title="Destination" class="timeCustomWidth">יעד</th>
                                             <th title="Hospital" class="timeCustomWidth">בית חולים</th>
-                                            <th title="Barrier" class="timeCustomWidth">מחסום</th>
+                                            <th title="Barrier" class="timeCustomWidth">מעבר</th>
                                             <th title="Count" class="timeCustomWidth">מספר הסעות</th>
 
                                         </tr>
@@ -494,7 +494,7 @@
                                     <tbody></tbody>
                                     <tfoot>
                                         <tr>
-                                            <th colspan="3" style="text-align:left">סה"כ הסעות:</th>
+                                            <th colspan="6" style="text-align:left">סה"כ הסעות:</th>
                                             <th id="center_patients_rides_footer_total"></th>
                                         </tr>
                                     </tfoot>
@@ -1048,19 +1048,14 @@
 
     <style>
 
-        <!-- https://uxsolutions.github.io/bootstrap-datepicker -->
-        .datepicker-months td span {
-            width: 23%;
-            text-align: center;
-            float: left;
-            margin: 1%;
-            cursor: pointer;
-            border-radius: 4px;
+        <!-- https://uxsolutions.github.io/bootstrap-datepicker   -->
+        .datepicker-months table tr td span.month {
+            color: black;
+        }
+        .datepicker-months table tr td span.month.disabled {
+            color: lightgray;
         }
 
-        .datepicker-months td span:hover {
-            background: #eee;
-        }
     </style>
 
     <script src="../plugins/bootstrap-sweetalert/sweet-alert.min.js"></script>
