align work client+server+dbChangesStructure before deploy to PROD
Location.cs - error handling
webService - error handling
ridepatform -error handling

DB_TracksChanges.sql - check what PROD DB allready have and fix the file accordingly

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1314,7 +1314,8 @@
                         return resolve(1);
                     },
                     error: function (err) {
-                        alert("Error in generateLocation");
+                        alert("Error in generateLocation" + err.responseText);
+                        console.log(err);
                         return reject(0);
                     }
                 });
