--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1284,6 +1284,17 @@
             }
         }
 
+        const compareFunc = (a, b) => {
+
+            if (a.Name < b.Name) {
+                return -1;
+            }
+            if (a.Name > b.Name) {
+                return 1;
+            }
+            return 0;
+        }
+
         async function generateLocation() {
 
             generateLocationPromise = new Promise((resolve, reject) => {
@@ -1304,11 +1315,11 @@
                     success: function (data) {
 
                         arr_locations = JSON.parse(data.d);
-                        arr_locations.sort();
+                        arr_locations.sort(compareFunc);
                         for (i in arr_locations) {
 
-                            $('<option>', { value: arr_locations[i].Name, text: arr_locations[i].EnglishName }).appendTo($select);
-                            $('<option>', { value: arr_locations[i].Name, text: arr_locations[i].EnglishName }).appendTo($select1);
+                            $('<option>', { value: arr_locations[i].Name, text: arr_locations[i].Name }).appendTo($select);
+                            $('<option>', { value: arr_locations[i].Name, text: arr_locations[i].Name }).appendTo($select1);
                         }
 
                         return resolve(1);
@@ -1420,9 +1431,9 @@
             }
             return true;
         }
- 
+
         function checkFutureDate(date) {
-  
+
             checkDate = Date.parse(date); //parameter datetime to compare with today
             if ($("#afterNoon").is(':checked')) { //22:14 is the default time that means afternoon אחה''צ
                 checkDate = Date.parse(new Date(date.getFullYear(), date.getMonth(), date.getDate(), 23, 59));
@@ -2057,7 +2068,7 @@
             });
 
             $('#deleteDriver').show();
- 
+
         }
 
         function signDriverErrorCB() {
