--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1064,38 +1064,38 @@
         }
 
         function copyMessageButton(copyMsgBtn, table) {
-            let ridePatNum = parseInt(copyMsgBtn.id);
 
+            let ridePatNum = parseInt(copyMsgBtn.id);
             let additionalPatients = '';
             let additionalInfo = '';
-
-
+            let additionalRidesForSameDriver;
             const ridepat = arr_rides.find((r) => r.RidePatNum === ridePatNum);
-
             const onlyRidepatsWithDriver = arr_rides.filter(r => r.Drivers.length > 0);
 
+            if (ridepat.Drivers.length > 0) {
 
-            let additionalRidesForSameDriver = arr_rides.filter((r) => {
-                return (
-                    r.Destination.Name === ridepat.Destination.Name &&
-                    r.Origin.Name === ridepat.Origin.Name &&
-                    r.Drivers[0].Id === ridepat.Drivers[0].Id &&
-                    r.Date === ridepat.Date &&
-                    r.RidePatNum != ridepat.RidePatNum
-                )
-            });
-
-            if (additionalRidesForSameDriver.length > 0) {
-
-                additionalPatients += ', '
-                additionalRidesForSameDriver.map((r, i) => {
-
-                    additionalPatients += r.Pat.DisplayName;
-                    additionalPatients += i !== additionalRidesForSameDriver.length - 1 ? ', ' : '';
-
+                additionalRidesForSameDriver = onlyRidepatsWithDriver.filter((r) => {
+                    return (
+                        r.Destination.Name === ridepat.Destination.Name &&
+                        r.Origin.Name === ridepat.Origin.Name &&
+                        r.Drivers[0].Id === ridepat.Drivers[0].Id &&
+                        r.Date === ridepat.Date &&
+                        r.RidePatNum != ridepat.RidePatNum
+                    )
                 });
-            }
 
+                if (additionalRidesForSameDriver.length > 0) {
+
+                    additionalPatients += ', '
+                    additionalRidesForSameDriver.map((r, i) => {
+
+                        additionalPatients += r.Pat.DisplayName;
+                        additionalPatients += i !== additionalRidesForSameDriver.length - 1 ? ', ' : '';
+
+                    });
+                }
+
+            }
             let jsDate = convertDBDate2FrontEndDate(ridepat.Date);
 
             let isAfterNoon = jsDate.getMinutes() === 14;
@@ -1145,6 +1145,15 @@
 
                     }
                 });
+
+
+
+
+
+
+
+
+
             }
 
             navigator.clipboard.writeText(textMessageToCopy)
