Totals for Volunteers, per page & full

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -494,8 +494,22 @@
                                     <tbody></tbody>
                                     <tfoot>
                                         <tr>
-                                            <th colspan="6" style="text-align:left">סה"כ הסעות:</th>
-                                            <th id="center_patients_rides_footer_total"></th>
+                                            <th style="text-align:left">סה"כ מתנדבים בדף:</th>
+                                            <th id="center_patients_rides_footer_vol_page"></th>
+                                            <th style="text-align:left">סה"כ חולים בדף:</th>
+                                            <th></th>
+                                            <th id="center_patients_rides_footer_pat_page"></th>
+                                            <th style="text-align:left">סה"כ הסעות בדף:</th>
+                                            <th id="center_patients_rides_footer_rides_page"></th>
+                                        <tr>
+                                            <th style="text-align:left">סה"כ מתנדבים כללי:</th>
+                                            <th id="center_patients_rides_footer_vol_total"></th>
+                                            <th style="text-align:left">סה"כ חולים כללי:</th>
+                                            <th></th>
+                                            <th id="center_patients_rides_footer_pat_total"></th>
+                                            <th style="text-align:left">סה"כ הסעות כללי:</th>
+                                            <th id="center_patients_rides_footer_rides_total"></th>
+                                        </tr>
                                         </tr>
                                     </tfoot>
                                 </table>
