added viewC to show yael

--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -66,6 +66,7 @@
 <body class="fixed-left">
     <!-- Begin page -->
     <div id="wrapper">
+
         <!-- Top Bar Start -->
         <div class="topbar">
             <!-- Navbar -->
@@ -221,6 +222,10 @@
                         <i class="fa fa-history"></i>
                         temp for ride's history
                     </button>
+                    <div>
+                        <input type="number" id="rideId" />
+                        <button id="GetCandidatesBTN">Get Candidates</button>
+                    </div>
                 </div>
                 <!-- end container -->
 
