--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -496,20 +496,20 @@
                                         <tr>
                                             <th style="text-align:left">סה"כ מתנדבים בדף:</th>
                                             <th id="center_patients_rides_footer_vol_page"></th>
-                                            <th style="text-align:left">סה"כ חולים בדף:</th>
-                                            <th></th>
+                                            <th style="text-align:left"></th>
                                             <th id="center_patients_rides_footer_pat_page"></th>
+                                            <th></th>
                                             <th style="text-align:left">סה"כ הסעות בדף:</th>
                                             <th id="center_patients_rides_footer_rides_page"></th>
+                                        </tr>
                                         <tr>
                                             <th style="text-align:left">סה"כ מתנדבים כללי:</th>
                                             <th id="center_patients_rides_footer_vol_total"></th>
                                             <th style="text-align:left">סה"כ חולים כללי:</th>
-                                            <th></th>
                                             <th id="center_patients_rides_footer_pat_total"></th>
+                                            <th></th>
                                             <th style="text-align:left">סה"כ הסעות כללי:</th>
                                             <th id="center_patients_rides_footer_rides_total"></th>
-                                        </tr>
                                         </tr>
                                     </tfoot>
                                 </table>
