--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -748,6 +748,37 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row report_template" name="template_DATE_START">
+                            <div class="card-box">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">מתאריך</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" template_id="select_date_start" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_DATE_END">
+                            <div class="card-box">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">עד תאריך</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" template_id="select_date_end" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row report_template" name="template_MONTH_START">
                             <div class="card-box">
                                 <div class="row">
@@ -775,10 +806,7 @@
                                                 <input type="text" template_id="select_month_end" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
-
                                     </div>
-
-
                                 </div>
                             </div>
                         </div>
